--- a/Bayesian_inference_1/Problem_Sets/PS_3_Key.qmd
+++ b/Bayesian_inference_1/Problem_Sets/PS_3_Key.qmd
@@ -17,6 +17,7 @@ format:
 #| warning: false
 
 library(tidyverse)
+library(cmdstanr)
 library(rethinking)
 
 # Required files for this problem set:
@@ -39,16 +40,20 @@ Recall the 7 steps of our Bayesian workflow. Remember that some steps are relati
 
 We will work through these steps with a few different linear models. All of these models have only 1 predictor and are ones that we used in *Quantitative Methods 1*, either for lecture or in problem sets. So the data should be familiar even if the conclusions are not fresh in your mind.
 
-In this problem set we will be very explicit about following the steps. This is good practice to learn as you are getting familiar with Bayesian inference.
+In this problem set we will be very explicit about following the steps. This is good to practice and learn as you are gaining experience with Bayesian inference.
 
 
 ## Difference of means with two groups
 
-t-test-like: horned lizards
+Our first model will compare the means of two groups. This is like a two-sample *t*-test. It is one of the most common statistical tests, also sometimes called an "independent samples" *t*-test.
 
-Read data
+Rather than thinking of it as a *t*-test, just consider it a linear model with a single predictor that is a categorical variable with two levels. We know that's a lot more convoluted sounding, but trying to move away from "named tests" is worthwhile in the long run.
 
-- drop any NA rows
+The data we will use involves the effects (or lack thereof) of predation on flat-tail horned lizards (*Phrynosoma mccalli*). The hypothesis is that longer horns a protective against predation by loggerhead shrikes (*Lanius ludovicianus*). 
+
+The parietal horn length of two groups of horned lizards were measured by Young et al. (2004)^[Young, K.V., E.D. Brodie, Jr., and E.D. Brodie, III. 2004. How the horned lizard got its horns. *Science* 304: 65]. One group of lizards were alive, and the other group had been killed by shrikes and left in trees or bushes.
+
+Read in the data included in the file `HornedLizards.csv`. Drop any rows with NA values. You should have 184 rows remaining.
 
 ```{r}
 # FIXME
@@ -94,7 +99,7 @@ HL |>
             Var = var(horn_length))
 ```
 
-You will observe that there are about 5 times more alive lizards than dead. *t*-tests work best when sample sizes are fairly close and assume that the variances are equal between groups. Although the variances are very close in this sample, it is deceiving, because the sample sizes are so different. The variance scales with the sample size (larger samples will tend to have larger variances, just because of the equation for variance). This is in contrast to standard deviation (which is scaled to the sample size and thus comparable across samples of different size, as long as the units are the same). If you were going to use a *t*-test for these data, you would probably want to use Welch's correction for unequal variances ("Welch's correction"), which is the default in R.
+You will observe that there are about 5 times more alive lizards than dead. *t*-tests work best when sample sizes are fairly close and assume that the variances are equal between groups. Although the variances are very close in this sample, it is deceiving, because the sample sizes are so different. The variance scales with the sample size (larger samples will tend to have larger variances, just because of the equation for variance). This is in contrast to standard deviation (which is scaled to the sample size and thus comparable across samples of different size, as long as the units are the same). If you were going to use a *t*-test for these data, you would probably want to use Welch's correction for unequal variances ("Welch's correction"), which is the default in R. There are frequentist approaches that do something similar, which fall under the general term "robust regression".
 
 To prepare the data for passing to `ulam()`, we have to make a change to the formatting of the `group` variable:
 
@@ -118,19 +123,19 @@ We will fit a linear model to these data. The basic model statements are:
   \mu & = b[\mathrm{group}] \\
 \end{align}
 
-Translated, these lines say that `horn_length` is modeled by a normal distribution with a mean ($\mu$) and standard deviation ($\sigma$). The mean is estimated separately for each level of `group` by a predictor called `b`.
+Translated, these lines say that `horn_length` is modeled by a normal distribution with a mean ($\mu$) and standard deviation ($\sigma$). The mean is estimated separately for each level of `group` by a predictor called $b$.
 
-We have written the model in [LaTeX code](https://www.overleaf.com/learn/latex/Mathematical_expressions). LaTeX is a markup language (like html, rmd, qmd, etc) for typesetting math equations (and lots of other things, like dissertations). You have seen it periodically throughout these problems sets and in the source code for the slides, most often inline using `\$ \$`, as for the mean and standard deviation in the previous paragraph. The `align` environment allows up for format the equations with the operators lining up where the `&` character is. The two backslashes mark new lines.
+We have written the model in [LaTeX code](https://www.overleaf.com/learn/latex/Mathematical_expressions). LaTeX (written as $\LaTeX$ to the purists) is a markup language (like html, rmd, qmd, etc.) for typesetting math equations (and lots of other things, like dissertations). You have seen it periodically throughout these problems sets and in the source code for the slides, most often inline using `$`, as for the mean and standard deviation in the previous paragraph. The `align` environment allows up for format the equations with the operators lining up where the `&` character is. The two backslashes `\\` mark new lines. `\mathrm{}` makes the text upright ("roman") although we are in math mode, which is useful to distinguish estimated parameters in italics from variable names.
 
-If you find yourself doing this kind of quantitative analysis often, you will also find yourself writing about it often and it's worth spending the time to pick up the relevant LaTeX coding. The basics are pretty straightforward, and you can get very far with just a little bit of knowledge. There are lots of online tutorials and translators.
+If you find yourself doing this kind of quantitative analysis often (and writing manuscripts in quarto), it's worth spending the time to pick up the relevant LaTeX coding. The basics are pretty straightforward, and you can get very far with just a little bit of knowledge. There are lots of online tutorials and translators.
 
 
 ### Prior specification and prior predictive check
 
-We have not added the lines to the model for the priors yet, because we need to carry out the prior predictive check. In the chunk below, we have given you the basic model as described above.
+We have not added the lines to the model for the priors yet, because we need to carry out the prior predictive check. In the chunk below, we have given you the basic model as describe above.
 
 - Set `eval` to `true`
-- Add lines for the priors. Choose some reasonable values for a normal distribution for `a_group` and a half-normal for `sigma`. 
+- Add lines for the priors. Choose some reasonable values for a normal distribution for `a_group` and a half-normal for `sigma`.
 
 We are set to only sample the prior (`sample_prior = TRUE`), so all the samples will come only from the prior. We still have to pass the data, but it is ignored during sampling.
 
@@ -175,13 +180,14 @@ pp_dist |>
   theme(legend.position = "none")
 ```
 
-Try out different priors for `a_group` until you find a prior that seems good to you. Because we are not looking at the values for the standard deviation (we just asked you to extract the `b` parameter matrix from the samples, ignoring the standard deviation for now), changing its value won't alter the pattern. If we wanted to, we could choose rows from both priors and simulate data using the full set of parameters, which would be the most correct way to do this simulation. But we should be fine just using values for `horn_length`.
+Iterate through different priors until you find a prior that seems good to you. Because we are not actually using the standard deviation in the prior prediction, changing its value won't alter the pattern. If we wanted to, we could choose rows from the prior and simulate data using the full set of parameters, which would be the most correct way to do this simulation. But we should be fine just using values for `horn_length`.
+
 
 ### Final model specification
 
 Add the values that you chose for the priors to the model statement below:
 
-# FIXME
+## FIXME
 
 \begin{align}
   \mathrm{horn\_length} & \sim Normal(\mu, \sigma) \\
@@ -256,10 +262,18 @@ Taken together, do you think that the sampling was successful?
 
 ### Posterior predictive check
 
-First we would like to compare the prior to the posterior.
+First we would like to compare the prior to the posterior. We would like to get the two sets of samples into the same R object with a new column that specifies if the samples came from the prior or the posterior.
+
+- Add a column to `pp_dist` from above named `PP` with the value "Prior". The `PP` column will denote which set of samples we are using.
+- Extract the posterior by adapting the code we used above for the prior. Then add the same `PP` column, but set to "Posterior".
+- To get the two sets of samples into the same object, pass both to `bind_rows()`.
+- Now pivot the full set longer using all variables except `PP`. Set the names to `group` and the values to `horn_length`.
 
 ```{r}
 # FIXME
+
+pp_dist <- pp_dist |> 
+  mutate(PP = "Prior")
 
 post <- extract.samples(fm)$b |> 
   as.data.frame() |> 
@@ -267,20 +281,38 @@ post <- extract.samples(fm)$b |>
          dead = V2) |> 
   mutate(PP = "Posterior")
 
-pp_dist <- pp_dist |> 
-  mutate(PP = "Prior")
-
 samples <- bind_rows(pp_dist, post) |> 
   pivot_longer(cols = -PP, names_to = "group", values_to = "horn_length")
+```
+
+Now make a density plot of all the samples (adapting the code from above):
+
+- Encode color with `group`
+- Encode linetype with `PP`
+
+Your plot should have four lines, two solid lines from the posterior and two dashed lines from the prior.
+
+```{r}
+# FIXME
 
 ggplot() +
-  geom_density(data = samples, aes(horn_length, color = group, linetype = PP)) +
+  geom_density(data = samples, aes(horn_length, color = group,
+                                   linetype = PP), linewidth = 1) +
   scale_color_manual(values = c("tomato", "steelblue")) +
   cowplot::theme_cowplot() +
   labs(x = "Horn Length (mm)", y = "Density")
 ```
 
-Compare the posterior to the data
+How does the posterior compare to the prior?
+
+> The priors are broad and relatively flat in comparison to the posteriors. The posteriors are very compressed and do not overlap much. The priors overlap perfectly (they should because we used the same prior for both).
+
+Next we would like to compare the posterior to the data. We will mostly let you try to figure this out. A few suggestions:
+
+- Reload the `HornedLizards.csv` file (copy your code from above). This has the original codings for "alive" "dead" rather than those recoded as 1 and 2.
+- The observed data is already in long format. So just add the `PP` column as "Observed".
+- Use your posterior object from above and pivot that longer as above.
+- Add the data separately by using `geom_density()` separately for each set of data. Set the linetype manually (i.e., outside of `aes()`).
 
 ```{r}
 # FIXME
@@ -292,8 +324,10 @@ post_long <- post |>
   pivot_longer(cols = -PP, names_to = "group", values_to = "horn_length")
 
 ggplot() +
-  geom_density(data = HL, aes(horn_length, color = group), linetype = "solid") +
-  geom_density(data = post_long, aes(horn_length, color = group), linetype = "dotted") +
+  geom_density(data = HL, aes(horn_length, color = group),
+               linetype = "solid", linewidth = 1) +
+  geom_density(data = post_long, aes(horn_length, color = group),
+               linetype = "dotted", linewidth = 1) +
   scale_color_manual(values = c("tomato", "steelblue")) +
   cowplot::theme_cowplot() +
   labs(x = "Horn Length (mm)", y = "Density")
@@ -301,15 +335,76 @@ ggplot() +
 
 How does the posterior for each group compare to the observed data?
 
-> Their central tendencies are very similar. But the spread of the observed data is much larger. This is to be expected. For the posterior, we are plotting the distributions of the expected values. These values do not include the standard deviations. We would have to do things somewhat differently to include the variation encoded by `sigma`. We will do this step later in the course.
+> Their central tendencies are very similar. But the spread of the observed data is much larger. This is to be expected. For the posterior, we are plotting the distributions of the expected values. These values do not include the standard deviation. We would have to do things slightly differently to include the variation encoded by `sigma`. We will do this step later in the course.
 
 
 ### Summarizing the posterior
 
+Compare the means of horn length in the observed data to the means (or medians) of the posterior estimates.
 
+```{r}
+# FIXME
+
+HL |> 
+  group_by(group) |> 
+  summarize(Mean = mean(horn_length))
+
+precis(fm, depth = 2)
+```
+
+How do they compare?
+
+> They are very close.
+
+It is important to remember the conceptual differences between frequentist analysis (like a *t*-test) and Bayesian inference. The underlying frequentist assumption is that these samples of lizards are drawn from populations with fixed means (i.e., a fixed mean value for horn length in each group). The Bayesian approach views the data as fixed (i.e., this is what we observe) and seeks to find the parameter estimates that are most compatible. The numerical answers are very very close (at least for this example), but the assumptions / framework are quite different. If you run `t.test()` on these data, the means that are compared are just the group means. Our Bayesian analysis gives similar values but these are posterior estimates (not just the directly calculated group means for the groups).
+
+We aren't really interested in the posterior means themselves. We are interested in the *difference* between them (called a "contrast"). This difference tests the hypothesis that the means of the two groups are different (or not) from one another.
+
+Calculate the difference between dead and alive using the posterior. You can just add a column to the tibble with the posterior.
+
+```{r}
+# FIXME
+
+post <- post |> 
+  mutate(dead_minus_alive = dead - alive)
+```
+
+Make a density plot of the difference you calculated.
+
+```{r}
+# FIXME
+
+ggplot(post, aes(dead_minus_alive)) +
+  geom_density() +
+  cowplot::theme_cowplot() +
+  labs(x = "Dead - Alive (mm)", y = "Density")
+```
+
+What is your interpretation of the plot?
+
+> There appears to be robust and credible difference between the means for the dead vs. alive groups. The peak of the density is about -2 mm, with most of the distribution between -1 and -3.5 mm.
+
+Finally, calculate the 89% highest density interval for the difference in any way you want (`HPDI()` from `rethinking` is fine for example). 
+
+```{r}
+# FIXME
+
+HPDI(post$dead_minus_alive)
+```
+
+Does the interval agree with your assessment of the plot?
+
+> Yes, the interval is from -1.45 to -3.13 mm. So all of the density is far from 0. We don't need to worry about a ROPE or anything here.
 
 
 ## Bivariate OLS-like: Earwigs proportion forceps QMLS 1 PS 6
+
+```{r}
+# FIXME
+
+EW <- read_csv("../Data/Earwigs.csv", show_col_types = FALSE)
+EW
+```
 
 ### Model specification
 
